added more styling to transaction list

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -5,8 +5,7 @@
 
 body {
     margin: 0 auto;
-    padding: 0 1rem;
-    min-width: 480px;
+    width: 85vw;
 
     font-family: Arial, Helvetica, sans-serif;
 }
