--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,4 +1,3 @@
-
 * {
     box-sizing: border-box;
 }
@@ -10,4 +9,26 @@ body {
     width: 90vw;
 
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.center-dialog {
+  height: 70vh;
+}
+
+.card-body {
+  text-align: center;
+}
+
+.card-body input {
+  margin: 10px auto;
+  display: block;
+}
+
+.navbar-nav {
+  display: grid;
+  grid-template-columns: repeat(11, 1fr);
+}
+
+.navbar-nav a {
+  text-align: center;
 }
