--- a/client/css/transaction/list.css
+++ b/client/css/transaction/list.css
@@ -1,10 +1,12 @@
 
-/* FLEXBOX */
-
 .transaction-tracking-items {
   display: flex;
   flex-direction: column;
   /* gap: 1em; */
+}
+
+.transaction-list {
+  margin: 2rem 0;
 }
 
 .transaction-list-title {
