--- a/client/css/landing_page.css
+++ b/client/css/landing_page.css
@@ -11,6 +11,12 @@
   height: 4rem;
 }
 
+@media only screen and (max-width: 720px) {
+  .main-logo img {
+    height: 2rem;
+  }
+}
+
 .gif img {
   height: 10rem;
 }
