more space at top

--- a/client/css/landing_page.css
+++ b/client/css/landing_page.css
@@ -1,6 +1,7 @@
 .main-logo {
   text-align: center;
   padding-bottom: 2rem;
+  margin-top: 2rem;
 }
 
 .main-logo h1 {
@@ -27,5 +28,9 @@
   align-items: center;
   margin: 0 auto;
   gap: 2rem;
+}
+
+.card-body {
+  margin-top: 30%;
 }
 
