--- a/client/css/main.css
+++ b/client/css/main.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-color: rgb(255, 255, 255);
+  background-color: white;
   color: #222;
   margin: 0 auto;
   width: 90vw;
@@ -22,15 +22,6 @@ body {
 
 .center-dialog {
   height: 40vh;
-}
-
-.card-body {
-  text-align: center;
-}
-
-.card-body input {
-  margin: 10px auto;
-  display: block;
 }
 
 .material-icons {
