--- a/client/css/transaction/overview.css
+++ b/client/css/transaction/overview.css
@@ -3,7 +3,17 @@
   justify-content: center;
 }
 
-@media only screen and (max-width: 720px) {
+.card-body {
+  text-align: center;
+  translate: 0px 5em;
+}
+
+.card-body input {
+  margin: 10px auto;
+  display: block;
+}
+
+@media only screen and (max-width: 768px) {
   .overview h1, .overview p {
     text-align: right;
     width: 80%;
