--- a/client/css/transaction/list.css
+++ b/client/css/transaction/list.css
@@ -87,26 +87,26 @@
 }
 
 .item-style-red {
-  background-color: #f77;
-  color: #fff;
+  background-color: #F8FFE5;
+  color: #333;
 }
 
 .item-style-blue {
-  background-color: #77f;
+  background-color: #06D6A0;
   color: #fff;
 }
 
 .item-style-brown {
-  background-color: rgb(146, 112, 45);
+  background-color: #1B9AAA;
   color: #fff;
 }
 
 .item-style-orange {
-  background-color: rgb(248, 174, 89);
-  color: #333;
+  background-color: #EF476F;
+  color: #fff;
 }
 
 .item-style-yellow {
-  background-color: #ff7;
+  background-color: #FFC43D;
   color: #333;
 }
