--- a/client/css/nav.css
+++ b/client/css/nav.css
@@ -38,8 +38,11 @@
   }
 
   .sticky-nav-text-box {
+    display: flex;
     padding: 0;
-    height: inherit;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
     transition: color 0.2s;
   }
 
@@ -53,7 +56,6 @@
 
   .sticky-nav-text {
     margin: auto 0;
-    padding-top: 25px;
     font-size: 5vmin;
     text-align: center;
     color: whitesmoke;
