Boostrap-i-fied error message

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -62,3 +62,12 @@ footer > p {
   justify-content: space-between;
   align-items: center;
 }
+
+.alert > h2 {
+  margin: 0;
+  font-size: 1em;
+}
+
+.alert > svg {
+  width: 1em;
+}
